--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,18 +29,22 @@
     </span>
     <div class="col-xs-6 col-sm-10 col-md-10">
 
-      <% if flash[:notice] %>
-        <div class="flash alert alert-success alert-dismissible" role="alert">
-          <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <%= flash[:notice] %>
-        </div>
-      <% end %>
-      <% if flash[:alert] %>
-        <div class="flash alert alert-danger alert-dismissible" role="alert">
-          <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <%= flash[:alert] %>
-        </div>
-      <% end %>
+      <div id="flash-notice">
+        <% if flash[:notice] %>
+          <div class="flash alert alert-success alert-dismissible" role="alert">
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <%= flash[:notice] %>
+          </div>
+        <% end %>
+      </div>
+      <div id="flash-alert">
+        <% if flash[:alert] %>
+          <div class="flash alert alert-danger alert-dismissible" role="alert">
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <%= flash[:alert] %>
+          </div>
+        <% end %>
+      </div>
 
       <%= yield %>
 
