Use AJAX for destroying comments

--- a/app/views/posts/_comment.html.erb
+++ b/app/views/posts/_comment.html.erb
@@ -1,11 +1,12 @@
-<blockquote>
+<blockquote id="comment_<%= @post.id %>">
   <p><%= object.content %>
       <% if user_signed_in? && current_user.admin? %>
         <%= link_to "",
             post_path(object),
             class: "glyphicon glyphicon-remove pull-right",
             data: { confirm: "Are you sure?" },
-            method: :delete %>
+            method: :delete,
+            remote: true %>
       <% end %>
   </p>
   <footer><%= object.user.first_name %></footer>
