--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -14,7 +14,7 @@
     <%= bootstrap_form_for @comment, remote: true do |f| %>
       <%= render "layouts/errors", object: @comment %>
 
-      <%= f.text_area :content, rows: 3, hide_label: true %>
+      <%= f.text_area :content, rows: 3, hide_label: true, autofocus: true %>
       <%= f.hidden_field :user_id, value: current_user.id %>
       <%= f.hidden_field :post_id, value: @post.id %>
       <%= f.hidden_field :comment, value: true %>
