--- a/app/views/posts/destroy.js.erb
+++ b/app/views/posts/destroy.js.erb
@@ -1,4 +1,3 @@
-$("#post_content").val('');
-$("#comments").prepend("<%=j render 'comment', object: @post %>");
+$("#comment_<%= @comment.id %>").remove();
 $("#flash-notice").append("<div class='flash alert alert-success alert-dismissible' role='alert'><button type='button' class='close' data-dismiss='alert' aria-label='Close'><span aria-hidden='true'>&times;</span></button><span id='notice'><%= notice %></span></div>");
 window.setTimeout(function() { $(".flash").alert().slideUp(); }, 5000);
