--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,7 @@
         <% end %>
       </div>
       <div id="flash-alert">
-        <% if flash[:alert] %>
+        <% if alert %>
           <div class="flash alert alert-danger alert-dismissible" role="alert">
             <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
             <%= flash[:alert] %>
