--- a/app/views/posts/create.js.erb
+++ b/app/views/posts/create.js.erb
@@ -3,6 +3,7 @@ $("#errors").remove();
   $("#new_post").prepend("<%=j render 'layouts/errors', object: @comment %>")
 <% else %>
   $("#post_content").val(null);
+  $("#new_post").slideUp().then($("#new-comment-button").slideDown());
   $("#comments").prepend("<%=j render 'comment', object: @post %>");
   $("#flash-notice").append("<div class='flash alert alert-success alert-dismissible' role='alert'><button type='button' class='close' data-dismiss='alert' aria-label='Close'><span aria-hidden='true'>&times;</span></button><span id='notice'><%= notice %></span></div>");
   window.setTimeout(function() { $(".flash").alert().slideUp(); }, 5000);
