Break up navigation into groups

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -12,8 +12,10 @@
 <%= content_for :nav do %>
   <%= render 'nav_content' %>
   <% if user_signed_in? && current_user.admin? %>
-    <%= link_to "Add a Category",
-        new_category_path,
-        class: "list-group-item" %>
+    <div class="list-group nav-group">
+      <%= link_to "Add a Category",
+          new_category_path,
+          class: "list-group-item" %>
+    </div>
   <% end %>
 <% end %>
