--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -26,13 +26,15 @@
 <% content_for :nav do %>
   <%= render "nav_content" %>
   <% if user_signed_in? && current_user.admin? %>
-    <%= link_to "Edit #{@category.language}",
-        edit_category_path(@category),
-        class: "list-group-item" %>
-    <%= link_to "Delete #{@category.language}",
-        category_path(@category),
-        class: "list-group-item",
-        data: { confirm: "Are you sure?" },
-        method: :delete %>
+    <div class="list-group nav-group">
+      <%= link_to "Edit #{@category.language}",
+          edit_category_path(@category),
+          class: "list-group-item" %>
+      <%= link_to "Delete #{@category.language}",
+          category_path(@category),
+          class: "list-group-item",
+          data: { confirm: "Are you sure?" },
+          method: :delete %>
+    </div>
   <% end %>
 <% end %>
