--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -4,8 +4,10 @@
 
 <%= content_for :nav do %>
   <%= render "nav_content" %>
-  <%= link_to 'Show', post_path(@post), class: "list-group-item" %>
-  <% if user_signed_in? && current_user.admin? %>
-    <%= link_to 'New Post', new_post_path, class: "list-group-item" %>
-  <% end %>
+  <div class="list-group nav-group">
+    <%= link_to 'Show', post_path(@post), class: "list-group-item" %>
+    <% if user_signed_in? && current_user.admin? %>
+      <%= link_to 'New Post', new_post_path, class: "list-group-item" %>
+    <% end %>
+  </div>
 <% end %>
