--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -10,6 +10,8 @@
 <%= content_for :nav do %>
   <%= render "nav_content" %>
   <% if user_signed_in? && current_user.admin? %>
-    <%= link_to 'New Post', new_post_path, class: "list-group-item" %>
+    <div class="list-group nav-group">
+      <%= link_to 'New Post', new_post_path, class: "list-group-item" %>
+    </div>
   <% end %>
 <% end %>
